Se arregla la parte de los mensajes de error y no interpretación del codigo, pero no es capaz de conectar con la bd

--- a/lamp.yaml
+++ b/lamp.yaml
@@ -22,6 +22,7 @@
     copy:
       src: /home/ansible/ansible-project/data_base/bd_tiendaonlinenueva.sql
       dest: /home/ansible
+      mode: 0744
     tags:
       - pretask
 
@@ -113,16 +114,15 @@
       - apache
 
   # PHP
-  - name: Instalación PHP
-    apt:
-      name: 
-        - "php{{ php_version }}"
-        - "php{{ php_version }}-mysql"
-        - "libapache2-mod-php{{ php_version }}"
-      state: present
-    notify: reinicia apache
+  - name: Instala la última versión de PHP disponible
+    ansible.builtin.shell:
+      cmd: |
+        apt update -y
+        DEBIAN_FRONTEND=noninteractive apt-get install -y php php-mysql libapache2-mod-php
+      executable: /bin/bash
     tags:
       - php
+
 
 
 
